@startuml
!include style.puml

scale 1.5

skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

class Allocation
class UniqueAllocationList
class Floor
class RoomNumber
class StudentId

UniqueAllocationList o--> "*" Allocation

Allocation o--> "1" Floor
Allocation o--> "1" RoomNumber
Allocation o--> "1" StudentId

@enduml
